Improve scss / Before add Side 2 and 3

--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
     <body>
         <header>
             <span class="timer-side">
-                <div>Side timer :</div>
+                <div>Side timer</div>
                 <span>12:12</span>
             </span>
             <h1 class="headder">Quick Math</h1>
             <span class="timer-game"
-                ><div>Game timer :</div>
+                ><div>Game timer</div>
                 <span>12:12</span>
             </span>
         </header>
@@ -26,10 +26,11 @@
                     <div class="health-bar__blocks"></div>
                     <div class="health-bar__blocks"></div>
                 </div>
+                <div class="solve-me">Solve this question :</div>
                 <div class="quiz">
-                    <span class="first-number">23</span>
+                    <span class="first-number">-123</span>
                     <span class="operation">+</span>
-                    <span class="second-number">44</span>
+                    <span class="second-number">-444</span>
                     <span>=</span>
                     <input
                         type="number"
@@ -38,7 +39,7 @@
                         step="1"
                     />
                 </div>
-                <input type="submit" />
+                <input type="submit" class="submit-btn" />
             </div>
             <!-- <div class="side2"></div> -->
             <!-- <div class="side3"></div> -->
