--- a/index.html
+++ b/index.html
@@ -41,8 +41,48 @@
                 </div>
                 <input type="submit" class="submit-btn" />
             </div>
-            <!-- <div class="side2"></div> -->
-            <!-- <div class="side3"></div> -->
+            <div class="side2">
+                <div class="health-bar">
+                    <div class="health-bar__blocks"></div>
+                    <div class="health-bar__blocks"></div>
+                    <div class="health-bar__blocks"></div>
+                </div>
+                <div class="solve-me">Solve this question :</div>
+                <div class="quiz">
+                    <span class="first-number">-123</span>
+                    <span class="operation">+</span>
+                    <span class="second-number">-444</span>
+                    <span>=</span>
+                    <input
+                        type="number"
+                        autofocus
+                        autocomplete="off"
+                        step="1"
+                    />
+                </div>
+                <input type="submit" class="submit-btn" />
+            </div>
+            <div class="side3">
+                <div class="health-bar">
+                    <div class="health-bar__blocks"></div>
+                    <div class="health-bar__blocks"></div>
+                    <div class="health-bar__blocks"></div>
+                </div>
+                <div class="solve-me">Solve this question :</div>
+                <div class="quiz">
+                    <span class="first-number">-123</span>
+                    <span class="operation">+</span>
+                    <span class="second-number">-444</span>
+                    <span>=</span>
+                    <input
+                        type="number"
+                        autofocus
+                        autocomplete="off"
+                        step="1"
+                    />
+                </div>
+                <input type="submit" class="submit-btn" />
+            </div>
         </main>
         <script src="js/script.js"></script>
     </body>
