Add random math question maker

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
                     <span class="second-number">-444</span>
                     <span>=</span>
                     <input
+                        class="input"
                         type="number"
                         autofocus
                         autocomplete="off"
@@ -41,6 +42,7 @@
                 </div>
                 <input type="submit" class="submit-btn" />
             </div>
+
             <div class="side2">
                 <div class="health-bar">
                     <div class="health-bar__blocks"></div>
@@ -54,6 +56,7 @@
                     <span class="second-number">-444</span>
                     <span>=</span>
                     <input
+                        class="input"
                         type="number"
                         autofocus
                         autocomplete="off"
@@ -62,6 +65,7 @@
                 </div>
                 <input type="submit" class="submit-btn" />
             </div>
+
             <div class="side3">
                 <div class="health-bar">
                     <div class="health-bar__blocks"></div>
@@ -75,6 +79,7 @@
                     <span class="second-number">-444</span>
                     <span>=</span>
                     <input
+                        class="input"
                         type="number"
                         autofocus
                         autocomplete="off"
