Add answer checker / Fix / for answer / Add changeSide() / Add wrongAnimation() / Add 3D cube folder

--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
         <header>
             <span class="timer-side">
                 <div>Side timer</div>
-                <span>12:12</span>
+                <span>00:00:00</span>
             </span>
             <h1 class="headder">Quick Math</h1>
             <span class="timer-game"
                 ><div>Game timer</div>
-                <span>12:12</span>
+                <span>00:00:00</span>
             </span>
         </header>
         <main>
@@ -28,9 +28,9 @@
                 </div>
                 <div class="solve-me">Solve this question :</div>
                 <div class="quiz">
-                    <span class="first-number">-123</span>
-                    <span class="operation">+</span>
-                    <span class="second-number">-444</span>
+                    <span class="first-number"></span>
+                    <span class="operation"></span>
+                    <span class="second-number"></span>
                     <span>=</span>
                     <input
                         class="input"
@@ -51,9 +51,9 @@
                 </div>
                 <div class="solve-me">Solve this question :</div>
                 <div class="quiz">
-                    <span class="first-number">-123</span>
-                    <span class="operation">+</span>
-                    <span class="second-number">-444</span>
+                    <span class="first-number"></span>
+                    <span class="operation"></span>
+                    <span class="second-number"></span>
                     <span>=</span>
                     <input
                         class="input"
@@ -74,9 +74,9 @@
                 </div>
                 <div class="solve-me">Solve this question :</div>
                 <div class="quiz">
-                    <span class="first-number">-123</span>
-                    <span class="operation">+</span>
-                    <span class="second-number">-444</span>
+                    <span class="first-number"></span>
+                    <span class="operation"></span>
+                    <span class="second-number"></span>
                     <span>=</span>
                     <input
                         class="input"
