Fix negative answers / Add disableEnableInputs() / Add submit-btn-effects

--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
                 </div>
                 <div class="solve-me">Solve this question :</div>
                 <div class="quiz">
-                    <span class="first-number"></span>
-                    <span class="operation"></span>
-                    <span class="second-number"></span>
+                    <span class="first-number">??</span>
+                    <span class="operation">?</span>
+                    <span class="second-number">??</span>
                     <span>=</span>
                     <input
                         class="input"
@@ -40,7 +40,7 @@
                         step="1"
                     />
                 </div>
-                <input type="submit" class="submit-btn" />
+                <input type="submit" class="submit-btn submit-btn-effects" />
             </div>
 
             <div class="side2">
@@ -51,9 +51,9 @@
                 </div>
                 <div class="solve-me">Solve this question :</div>
                 <div class="quiz">
-                    <span class="first-number"></span>
-                    <span class="operation"></span>
-                    <span class="second-number"></span>
+                    <span class="first-number">??</span>
+                    <span class="operation">?</span>
+                    <span class="second-number">??</span>
                     <span>=</span>
                     <input
                         class="input"
@@ -61,9 +61,10 @@
                         autofocus
                         autocomplete="off"
                         step="1"
+                        disabled
                     />
                 </div>
-                <input type="submit" class="submit-btn" />
+                <input type="submit" class="submit-btn " disabled />
             </div>
 
             <div class="side3">
@@ -74,9 +75,9 @@
                 </div>
                 <div class="solve-me">Solve this question :</div>
                 <div class="quiz">
-                    <span class="first-number"></span>
-                    <span class="operation"></span>
-                    <span class="second-number"></span>
+                    <span class="first-number">??</span>
+                    <span class="operation">?</span>
+                    <span class="second-number">??</span>
                     <span>=</span>
                     <input
                         class="input"
@@ -84,9 +85,10 @@
                         autofocus
                         autocomplete="off"
                         step="1"
+                        disabled
                     />
                 </div>
-                <input type="submit" class="submit-btn" />
+                <input type="submit" class="submit-btn" disabled />
             </div>
         </main>
         <script src="js/script.js"></script>
