Add game timer and delayTimer / Before change submitBtns[round].addEventListener (Backup)

--- a/index.html
+++ b/index.html
@@ -91,6 +91,6 @@
                 <input type="submit" class="submit-btn" disabled />
             </div>
         </main>
-        <script src="js/script.js"></script>
+        <script type="module" src="js/script.js"></script>
     </body>
 </html>
