Fix timer.js / Start working on end-screen

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                         disabled
                     />
                 </div>
-                <input type="submit" class="submit-btn " disabled />
+                <input type="submit" class="submit-btn" disabled />
             </div>
 
             <div class="side3">
@@ -91,6 +91,31 @@
                 <input type="submit" class="submit-btn" disabled />
             </div>
         </main>
+        <div class="end-screen">
+            <h2 class="end-screen__header">Results</h2>
+            <div class="end-screen__charts">
+                <div></div>
+                <div>Time</div>
+                <div>Health</div>
+                <div>Question</div>
+                <div>Round 1</div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div>Round 2</div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div>Round 3</div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+            </div>
+        </div>
         <script type="module" src="js/script.js"></script>
     </body>
 </html>
