Add end-screen timer and health / Add end-screen classes / Add secondConverter and stopIteration in timer.js

--- a/index.html
+++ b/index.html
@@ -92,29 +92,38 @@
             </div>
         </main>
         <div class="end-screen">
-            <h2 class="end-screen__header">Results</h2>
-            <div class="end-screen__charts">
-                <div></div>
-                <div>Time</div>
-                <div>Health</div>
-                <div>Question</div>
-                <div>Round 1</div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div>Round 2</div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div>Round 3</div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
+            <div></div>
+            <div>Time</div>
+            <div>Health</div>
+            <div>Question</div>
+            <div>Round 1</div>
+            <div class="end-screen__round-timer"></div>
+            <div class="end-screen__health">
+                <div class="end-screen__health__block"></div>
+                <div class="end-screen__health__block"></div>
+                <div class="end-screen__health__block"></div>
             </div>
+            <div class="end-screen__question"></div>
+            <div>Round 2</div>
+            <div class="end-screen__round-timer"></div>
+            <div class="end-screen__health">
+                <div class="end-screen__health__block"></div>
+                <div class="end-screen__health__block"></div>
+                <div class="end-screen__health__block"></div>
+            </div>
+            <div class="end-screen__question"></div>
+            <div>Round 3</div>
+            <div class="end-screen__round-timer"></div>
+            <div class="end-screen__health">
+                <div class="end-screen__health__block"></div>
+                <div class="end-screen__health__block"></div>
+                <div class="end-screen__health__block"></div>
+            </div>
+            <div class="end-screen__question"></div>
+            <div>Total</div>
+            <div class="end-screen__total-timer"></div>
+            <div class="end-screen__total-health"></div>
+            <div class="end-screen__total-question"></div>
         </div>
         <script type="module" src="js/script.js"></script>
     </body>
