Add end-screen-btns / Add question section in end-screen /

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
             <div>Time</div>
             <div>Health</div>
             <div>Question</div>
-            <div>Round 1</div>
+            <div>Side 1</div>
             <div class="end-screen__round-timer"></div>
             <div class="end-screen__health">
                 <div class="end-screen__health__block"></div>
@@ -104,7 +104,7 @@
                 <div class="end-screen__health__block"></div>
             </div>
             <div class="end-screen__question"></div>
-            <div>Round 2</div>
+            <div>Side 2</div>
             <div class="end-screen__round-timer"></div>
             <div class="end-screen__health">
                 <div class="end-screen__health__block"></div>
@@ -112,7 +112,7 @@
                 <div class="end-screen__health__block"></div>
             </div>
             <div class="end-screen__question"></div>
-            <div>Round 3</div>
+            <div>Side 3</div>
             <div class="end-screen__round-timer"></div>
             <div class="end-screen__health">
                 <div class="end-screen__health__block"></div>
@@ -124,6 +124,11 @@
             <div class="end-screen__total-timer"></div>
             <div class="end-screen__total-health"></div>
             <div class="end-screen__total-question"></div>
+        </div>
+        <div class="end-screen-btns">
+            <button>JSFiddle</button>
+            <button>Play Again</button>
+            <button>GitHub</button>
         </div>
         <script type="module" src="js/script.js"></script>
     </body>
