Add lostAllHealths / Remove inputs arrows / + small fixes

--- a/index.html
+++ b/index.html
@@ -126,9 +126,15 @@
             <div class="end-screen__total-question"></div>
         </div>
         <div class="end-screen-btns">
-            <button>JSFiddle</button>
-            <button>Play Again</button>
-            <button>GitHub</button>
+            <a href="#" title="jsfiddle.net"><button>JSFiddle</button></a>
+            <button title="reload page" onclick="location.reload()">Play Again</button>
+            <a
+                href="https://github.com/Ali-Sdg90/Quick-Math"
+                target="_blank"
+                title="github.com"
+            >
+                <button>GitHub</button>
+            </a>
         </div>
         <script type="module" src="js/script.js"></script>
     </body>
