--- a/index.html
+++ b/index.html
@@ -11,14 +11,18 @@
         <header>
             <span class="timer-side">
                 <div>Side timer</div>
-                <span>00:00:00</span>
+                <span>--</span>
             </span>
             <h1 class="headder">Quick Math</h1>
             <span class="timer-game"
                 ><div>Game timer</div>
-                <span>00:00:00</span>
+                <span>--</span>
             </span>
         </header>
+        <div class="ready-screen">
+            <div class="ready-screen__text">Are You Ready?</div>
+            <button class="ready-screen__btn">READY</button>
+        </div>
         <main>
             <div class="side1">
                 <div class="health-bar">
@@ -127,7 +131,9 @@
         </div>
         <div class="end-screen-btns">
             <a href="#" title="jsfiddle.net"><button>JSFiddle</button></a>
-            <button title="reload page" onclick="location.reload()">Play Again</button>
+            <button title="reload page" onclick="location.reload()">
+                Play Again
+            </button>
             <a
                 href="https://github.com/Ali-Sdg90/Quick-Math"
                 target="_blank"
