Add setting-btns / Add localStorge / Fix enter listener

--- a/index.html
+++ b/index.html
@@ -21,7 +21,28 @@
         </header>
         <div class="ready-screen">
             <div class="ready-screen__text">Are You Ready?</div>
-            <button class="ready-screen__btn">READY</button>
+            <button class="ready-screen__ready">READY</button>
+        </div>
+        <div class="setting-btns">
+            <button class="setting-btns__show-ans">
+                <form>
+                    <label>Show Answers</label>
+                    <input type="checkbox" id="show-ans" class="checkbox-inp" />
+                </form>
+            </button>
+            <button class="setting-btns__change-color">
+                Change Color
+            </button>
+            <button class="setting-btns__always-ready">
+                <form>
+                    <label>Always Ready</label>
+                    <input
+                        type="checkbox"
+                        id="always-ready"
+                        class="checkbox-inp"
+                    />
+                </form>
+            </button>
         </div>
         <main>
             <div class="side1">
