Add transition for Change Color / Add showAnsPlaceholders / Start work on setting-btns__nav

--- a/index.html
+++ b/index.html
@@ -24,15 +24,14 @@
             <button class="ready-screen__ready">READY</button>
         </div>
         <div class="setting-btns">
+            <div class="setting-btns__nav"><div>></div></div>
             <button class="setting-btns__show-ans">
                 <form>
                     <label>Show Answers</label>
                     <input type="checkbox" id="show-ans" class="checkbox-inp" />
                 </form>
             </button>
-            <button class="setting-btns__change-color">
-                Change Color
-            </button>
+            <button class="setting-btns__change-color">Change Color</button>
             <button class="setting-btns__always-ready">
                 <form>
                     <label>Always Ready</label>
