Add design-sketches folder / Add comment and tidy up js files /

--- a/index.html
+++ b/index.html
@@ -19,10 +19,12 @@
                 <span>--</span>
             </span>
         </header>
+
         <div class="ready-screen">
             <div class="ready-screen__text">Are You Ready?</div>
             <button class="ready-screen__ready">READY</button>
         </div>
+
         <div class="setting-btns">
             <div class="setting-btns__nav"><div>></div></div>
             <button class="setting-btns__show-ans">
@@ -43,12 +45,13 @@
                 </form>
             </button>
         </div>
+
         <main>
             <div class="side1">
-                <div class="health-bar">
-                    <div class="health-bar__blocks"></div>
-                    <div class="health-bar__blocks"></div>
-                    <div class="health-bar__blocks"></div>
+                <div class="life-bar">
+                    <div class="life-bar__blocks"></div>
+                    <div class="life-bar__blocks"></div>
+                    <div class="life-bar__blocks"></div>
                 </div>
                 <div class="solve-me">Solve this question :</div>
                 <div class="quiz">
@@ -67,10 +70,10 @@
             </div>
 
             <div class="side2">
-                <div class="health-bar">
-                    <div class="health-bar__blocks"></div>
-                    <div class="health-bar__blocks"></div>
-                    <div class="health-bar__blocks"></div>
+                <div class="life-bar">
+                    <div class="life-bar__blocks"></div>
+                    <div class="life-bar__blocks"></div>
+                    <div class="life-bar__blocks"></div>
                 </div>
                 <div class="solve-me">Solve this question :</div>
                 <div class="quiz">
@@ -90,10 +93,10 @@
             </div>
 
             <div class="side3">
-                <div class="health-bar">
-                    <div class="health-bar__blocks"></div>
-                    <div class="health-bar__blocks"></div>
-                    <div class="health-bar__blocks"></div>
+                <div class="life-bar">
+                    <div class="life-bar__blocks"></div>
+                    <div class="life-bar__blocks"></div>
+                    <div class="life-bar__blocks"></div>
                 </div>
                 <div class="solve-me">Solve this question :</div>
                 <div class="quiz">
@@ -112,40 +115,42 @@
                 <input type="submit" class="submit-btn" disabled />
             </div>
         </main>
+
         <div class="end-screen">
             <div></div>
             <div>Time</div>
-            <div>Health</div>
+            <div>life</div>
             <div>Question</div>
             <div>Side 1</div>
             <div class="end-screen__round-timer"></div>
-            <div class="end-screen__health">
-                <div class="end-screen__health__block"></div>
-                <div class="end-screen__health__block"></div>
-                <div class="end-screen__health__block"></div>
+            <div class="end-screen__life">
+                <div class="end-screen__life__block"></div>
+                <div class="end-screen__life__block"></div>
+                <div class="end-screen__life__block"></div>
             </div>
             <div class="end-screen__question"></div>
             <div>Side 2</div>
             <div class="end-screen__round-timer"></div>
-            <div class="end-screen__health">
-                <div class="end-screen__health__block"></div>
-                <div class="end-screen__health__block"></div>
-                <div class="end-screen__health__block"></div>
+            <div class="end-screen__life">
+                <div class="end-screen__life__block"></div>
+                <div class="end-screen__life__block"></div>
+                <div class="end-screen__life__block"></div>
             </div>
             <div class="end-screen__question"></div>
             <div>Side 3</div>
             <div class="end-screen__round-timer"></div>
-            <div class="end-screen__health">
-                <div class="end-screen__health__block"></div>
-                <div class="end-screen__health__block"></div>
-                <div class="end-screen__health__block"></div>
+            <div class="end-screen__life">
+                <div class="end-screen__life__block"></div>
+                <div class="end-screen__life__block"></div>
+                <div class="end-screen__life__block"></div>
             </div>
             <div class="end-screen__question"></div>
             <div>Total</div>
             <div class="end-screen__total-timer"></div>
-            <div class="end-screen__total-health"></div>
+            <div class="end-screen__total-life"></div>
             <div class="end-screen__total-question"></div>
         </div>
+        
         <div class="end-screen-btns">
             <a href="#" title="jsfiddle.net"><button>JSFiddle</button></a>
             <button title="reload page" onclick="location.reload()">
