Add jsfiddle link

--- a/index.html
+++ b/index.html
@@ -150,9 +150,13 @@
             <div class="end-screen__total-life"></div>
             <div class="end-screen__total-question"></div>
         </div>
-        
+
         <div class="end-screen-btns">
-            <a href="#" title="jsfiddle.net"><button>JSFiddle</button></a>
+            <a
+                href="https://jsfiddle.net/Ali_Sdg90/v7a9jhs6/2/"
+                title="jsfiddle.net"
+                ><button>JSFiddle</button></a
+            >
             <button title="reload page" onclick="location.reload()">
                 Play Again
             </button>
